--- a/po/fi.po
+++ b/po/fi.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-05-08 00:36+0300\n"
-"PO-Revision-Date: 2017-05-08 00:53+0300\n"
+"POT-Creation-Date: 2017-05-09 01:23+0300\n"
+"PO-Revision-Date: 2017-05-09 01:23+0300\n"
 "Last-Translator: Osmo Salomaa <otsaloma@iki.fi>\n"
 "Language-Team: Finnish\n"
 "Language: fi\n"
@@ -37,6 +37,10 @@ msgstr "Tietoja Pan Bikesista"
 msgid "version %1"
 msgstr "versio %1"
 
+#: qml/AboutPage.qml:49
+msgid "GitHub page"
+msgstr "GitHub-sivu"
+
 #: qml/AboutPage.qml:66
 msgid "Pan Bikes is free software released under the GNU General Public License (GPL), version 3 or later."
 msgstr "Pan Bikes on vapaa ohjelmisto, julkaistu lisenssillä GNU General Public License (GPL), versio 3 tai uudempi."
@@ -57,6 +61,10 @@ msgstr "Osmo Salomaa"
 #: qml/AboutPage.qml:93
 msgid "You can add new user interface translations or contribute to existing ones at Transifex."
 msgstr "Voit lisätä uusia käyttöliittymäkäännöksiä tai osallistua nykyisten käännösten parantamiseen Transifexissa."
+
+#: qml/AboutPage.qml:101
+msgid "Transifex page"
+msgstr "Transifex-sivu"
 
 #: qml/MenuPage.qml:43
 msgid "Network"
