--- a/po/nl.po
+++ b/po/nl.po
@@ -10,17 +10,17 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-09 21:34+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Osmo Salomaa <otsaloma@iki.fi>, 2017\n"
-"Language-Team: Finnish (https://www.transifex.com/otsaloma/teams/74551/fi/)\n"
+"Last-Translator: Nathan Follens <follens@dr.com>, 2017\n"
+"Language-Team: Dutch (https://www.transifex.com/otsaloma/teams/74551/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fi\n"
+"Language: nl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: pan/util.py:52
 msgid "Connection timed out"
-msgstr "Yhteys aikakatkaistiin"
+msgstr "Time-out bij verbinden"
 
 #: providers/citybikes_info.qml:28
 msgid ""
@@ -28,42 +28,42 @@ msgid ""
 "not supported, or you see an error in the data, you can contribute to the "
 "pybikes backend of that API by filing an issue and/or contributing code."
 msgstr ""
-"Tiedot haetaan citybik.es-rajapinnan kautta. Mikäli paikallinen "
-"kaupunkipyöräjärjestelmäsi ei ole tuettu, tai näet virheen tiedoissa, voit "
-"ilmoittaa asiasta rajapinnan pybikes-taustajärjestelmään tai osallistua sen "
-"kehittämiseen."
+"Gegevens worden aangeboden door citybik.es. Als je lokale stadsfietssysteem "
+"niet ondersteund wordt of als je een fout in de gegevens vindt, kan je "
+"bijdragen aan de pybikes-backend door de fout te melden of code bij te "
+"dragen."
 
 #: providers/hsl_info.qml:28
 msgid ""
 "You need to register to use city bikes. See HSL web pages for more "
 "information."
 msgstr ""
-"Kaupunkipyörien käyttö edellyttää rekisteröitymistä. Katso lisätietoja HSL:n"
-" sivuilta."
+"Je moet je registreren om stadsfietsen te gebruiken. Bekijk de website van "
+"HSL voor meer informatie."
 
 #: qml/AboutPage.qml:36
 msgid "About Pan Bikes"
-msgstr "Tietoja Pan Bikesista"
+msgstr "Over Pan Bikes"
 
 #: qml/AboutPage.qml:42
 msgid "version %1"
-msgstr "versio %1"
+msgstr "versie %1"
 
 #: qml/AboutPage.qml:49
 msgid "GitHub page"
-msgstr "GitHub-sivu"
+msgstr "GitHub-pagina"
 
 #: qml/AboutPage.qml:66
 msgid ""
 "Pan Bikes is free software released under the GNU General Public License "
 "(GPL), version 3 or later."
 msgstr ""
-"Pan Bikes on vapaa ohjelmisto, julkaistu lisenssillä GNU General Public "
-"License (GPL), versio 3 tai uudempi."
+"Pan Bikes is vrije software, uitgegeven onder de GNU General Public License "
+"(GPL), versie 3 of later."
 
 #: qml/AboutPage.qml:71
 msgid "Translated by"
-msgstr "Käännös"
+msgstr "Vertaald door"
 
 #. TRANSLATORS: This is a special message that shouldn't be translated
 #. literally. It is used in the about page to give credits to the translators.
@@ -72,35 +72,35 @@ msgstr "Käännös"
 #. write them on separate lines seperated by newlines (\n).
 #: qml/AboutPage.qml:83
 msgid "translator-credits"
-msgstr "Osmo Salomaa"
+msgstr "Nathan Follens"
 
 #: qml/AboutPage.qml:93
 msgid ""
 "You can add new user interface translations or contribute to existing ones "
 "at Transifex."
 msgstr ""
-"Voit lisätä uusia käyttöliittymäkäännöksiä tai osallistua nykyisten "
-"käännösten parantamiseen Transifexissa."
+"Je kan nieuwe vertalingen voor de gebruikersinterface indienen of bijdragen "
+"aan bestaande vertalingen op Transifex."
 
 #: qml/AboutPage.qml:101
 msgid "Transifex page"
-msgstr "Transifex-sivu"
+msgstr "Transifex-pagina"
 
 #: qml/MenuPage.qml:43
 msgid "Network"
-msgstr "Verkko"
+msgstr "Netwerk"
 
 #: qml/MenuPage.qml:57
 msgid "Preferences"
-msgstr "Asetukset"
+msgstr "Voorkeuren"
 
 #: qml/MenuPage.qml:63
 msgid "Maximum amount of stations visible"
-msgstr "Näytettävien asemien enimmäismäärä"
+msgstr "Maximaal aantal zichtbare stations"
 
 #: qml/MenuPage.qml:94
 msgid "About"
-msgstr "Tietoja"
+msgstr "Over"
 
 #: qml/NetworkPage.qml:67
 msgid "via %1"
@@ -108,16 +108,16 @@ msgstr "via %1"
 
 #: qml/NetworkPage.qml:89
 msgid "Networks"
-msgstr "Verkot"
+msgstr "Netwerken"
 
 #: qml/NetworkPage.qml:94
 msgid "Search"
-msgstr "Etsi"
+msgstr "Zoeken"
 
 #: qml/NetworkPage.qml:121
 msgid "Loading"
-msgstr "Ladataan"
+msgstr "Bezig met laden"
 
 #: qml/NetworkPage.qml:164
 msgid "No networks found"
-msgstr "Ei verkkoja"
+msgstr "Geen netwerken gevonden"
