--- a/po/sv.po
+++ b/po/sv.po
@@ -10,17 +10,17 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-09 21:34+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Osmo Salomaa <otsaloma@iki.fi>, 2017\n"
-"Language-Team: Finnish (https://www.transifex.com/otsaloma/teams/74551/fi/)\n"
+"Last-Translator: Åke Engelbrektson <eson@svenskasprakfiler.se>, 2017\n"
+"Language-Team: Swedish (https://www.transifex.com/otsaloma/teams/74551/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fi\n"
+"Language: sv\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: pan/util.py:52
 msgid "Connection timed out"
-msgstr "Yhteys aikakatkaistiin"
+msgstr "Tidsgränsen för anslutning överskreds"
 
 #: providers/citybikes_info.qml:28
 msgid ""
@@ -28,42 +28,41 @@ msgid ""
 "not supported, or you see an error in the data, you can contribute to the "
 "pybikes backend of that API by filing an issue and/or contributing code."
 msgstr ""
-"Tiedot haetaan citybik.es-rajapinnan kautta. Mikäli paikallinen "
-"kaupunkipyöräjärjestelmäsi ei ole tuettu, tai näet virheen tiedoissa, voit "
-"ilmoittaa asiasta rajapinnan pybikes-taustajärjestelmään tai osallistua sen "
-"kehittämiseen."
+"Data tillhandahålls via API från citybik.es. Om ditt lokala stadscykelsystem"
+" inte stöds, eller om du ser något fel i data, kan du bidra till pybikes "
+"gränssnitt för API:n genom att rapportera och/eller bidra med kod."
 
 #: providers/hsl_info.qml:28
 msgid ""
 "You need to register to use city bikes. See HSL web pages for more "
 "information."
 msgstr ""
-"Kaupunkipyörien käyttö edellyttää rekisteröitymistä. Katso lisätietoja HSL:n"
-" sivuilta."
+"Du behöver registrera dig för att använda stadscyklar. Se HSL:s webbsidor "
+"för mer information."
 
 #: qml/AboutPage.qml:36
 msgid "About Pan Bikes"
-msgstr "Tietoja Pan Bikesista"
+msgstr "Om Pan Bikes"
 
 #: qml/AboutPage.qml:42
 msgid "version %1"
-msgstr "versio %1"
+msgstr "version %1"
 
 #: qml/AboutPage.qml:49
 msgid "GitHub page"
-msgstr "GitHub-sivu"
+msgstr "GitHub-sidan"
 
 #: qml/AboutPage.qml:66
 msgid ""
 "Pan Bikes is free software released under the GNU General Public License "
 "(GPL), version 3 or later."
 msgstr ""
-"Pan Bikes on vapaa ohjelmisto, julkaistu lisenssillä GNU General Public "
-"License (GPL), versio 3 tai uudempi."
+"Pan Bikes är fri mjukvara, släppt under GNU General Public License (GPL), "
+"version 3 eller senare."
 
 #: qml/AboutPage.qml:71
 msgid "Translated by"
-msgstr "Käännös"
+msgstr "Översatt av"
 
 #. TRANSLATORS: This is a special message that shouldn't be translated
 #. literally. It is used in the about page to give credits to the translators.
@@ -72,35 +71,35 @@ msgstr "Käännös"
 #. write them on separate lines seperated by newlines (\n).
 #: qml/AboutPage.qml:83
 msgid "translator-credits"
-msgstr "Osmo Salomaa"
+msgstr "Åke Engelbrektson"
 
 #: qml/AboutPage.qml:93
 msgid ""
 "You can add new user interface translations or contribute to existing ones "
 "at Transifex."
 msgstr ""
-"Voit lisätä uusia käyttöliittymäkäännöksiä tai osallistua nykyisten "
-"käännösten parantamiseen Transifexissa."
+"Du kan lägga till nya programöversättningar eller bidra till befintliga på "
+"Transifex."
 
 #: qml/AboutPage.qml:101
 msgid "Transifex page"
-msgstr "Transifex-sivu"
+msgstr "Transifex-sidan"
 
 #: qml/MenuPage.qml:43
 msgid "Network"
-msgstr "Verkko"
+msgstr "Nätverk"
 
 #: qml/MenuPage.qml:57
 msgid "Preferences"
-msgstr "Asetukset"
+msgstr "Inställningar"
 
 #: qml/MenuPage.qml:63
 msgid "Maximum amount of stations visible"
-msgstr "Näytettävien asemien enimmäismäärä"
+msgstr "Max antal synliga stationer"
 
 #: qml/MenuPage.qml:94
 msgid "About"
-msgstr "Tietoja"
+msgstr "Om"
 
 #: qml/NetworkPage.qml:67
 msgid "via %1"
@@ -108,16 +107,16 @@ msgstr "via %1"
 
 #: qml/NetworkPage.qml:89
 msgid "Networks"
-msgstr "Verkot"
+msgstr "Nätverk"
 
 #: qml/NetworkPage.qml:94
 msgid "Search"
-msgstr "Etsi"
+msgstr "Sök"
 
 #: qml/NetworkPage.qml:121
 msgid "Loading"
-msgstr "Ladataan"
+msgstr "Läser in"
 
 #: qml/NetworkPage.qml:164
 msgid "No networks found"
-msgstr "Ei verkkoja"
+msgstr "Inget nätverk hittades"
