--- a/po/nl.po
+++ b/po/nl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Last-Translator: Nathan Follens <follens@dr.com>, 2017\n"
 "Language-Team: Dutch (https://www.transifex.com/otsaloma/teams/74551/nl/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: nl\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
