--- a/po/sv.po
+++ b/po/sv.po
@@ -13,7 +13,7 @@ msgstr ""
 "Last-Translator: Åke Engelbrektson <eson@svenskasprakfiler.se>, 2017\n"
 "Language-Team: Swedish (https://www.transifex.com/otsaloma/teams/74551/sv/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: sv\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
