Update translations for 0.2.1

--- a/po/de.po
+++ b/po/de.po
@@ -11,16 +11,16 @@ msgstr ""
 "POT-Creation-Date: 2017-06-04 03:10+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Osmo Salomaa <otsaloma@iki.fi>, 2017\n"
-"Language-Team: Finnish (https://www.transifex.com/otsaloma/teams/74551/fi/)\n"
+"Language-Team: German (https://www.transifex.com/otsaloma/teams/74551/de/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fi\n"
+"Language: de\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: pan/util.py:52
 msgid "Connection timed out"
-msgstr "Yhteys aikakatkaistiin"
+msgstr "Verbindungs-Timeout"
 
 #: providers/citybikes_info.qml:28
 msgid ""
@@ -28,42 +28,41 @@ msgid ""
 "not supported, or you see an error in the data, you can contribute to the "
 "pybikes backend of that API by filing an issue and/or contributing code."
 msgstr ""
-"Tiedot haetaan citybik.es-rajapinnan kautta. Mikäli paikallinen "
-"kaupunkipyöräjärjestelmäsi ei ole tuettu, tai näet virheen tiedoissa, voit "
-"ilmoittaa asiasta rajapinnan pybikes-taustajärjestelmään tai osallistua sen "
-"kehittämiseen."
+"Die Daten sind bereitgestellt via der citybik.es API. Wenn ihre lokale Stadt"
+" nicht unterstützt wird oder Sie stellen eine Fehler fest. Können Sie den "
+"Fehler melden oder den Code bereitstellen mit Hilfe des pybikes backend API"
 
 #: providers/hsl_info.qml:28
 msgid ""
 "You need to register to use city bikes. See HSL web pages for more "
 "information."
 msgstr ""
-"Kaupunkipyörien käyttö edellyttää rekisteröitymistä. Katso lisätietoja HSL:n"
-" sivuilta."
+"Sie müssen sich anmelden um city bike benutzen zu können. Sehen Sie HSL "
+"Webseite für mehr Informationen."
 
 #: qml/AboutPage.qml:36
 msgid "About Pan Bikes"
-msgstr "Tietoja Pan Bikesista"
+msgstr "Über Pan Bikes"
 
 #: qml/AboutPage.qml:42
 msgid "version %1"
-msgstr "versio %1"
+msgstr "Version %1"
 
 #: qml/AboutPage.qml:49
 msgid "GitHub page"
-msgstr "GitHub-sivu"
+msgstr "GitHub Seite"
 
 #: qml/AboutPage.qml:66
 msgid ""
 "Pan Bikes is free software released under the GNU General Public License "
 "(GPL), version 3 or later."
 msgstr ""
-"Pan Bikes on vapaa ohjelmisto, julkaistu lisenssillä GNU General Public "
-"License (GPL), versio 3 tai uudempi."
+"Pan Bikes ist eine freie Software veröffentlicht unter der GNU Public "
+"License (GPL) ab Version 3"
 
 #: qml/AboutPage.qml:71
 msgid "Translated by"
-msgstr "Käännös"
+msgstr "Übersetzt von"
 
 #. TRANSLATORS: This is a special message that shouldn't be translated
 #. literally. It is used in the about page to give credits to the translators.
@@ -72,52 +71,52 @@ msgstr "Käännös"
 #. write them on separate lines seperated by newlines (\n).
 #: qml/AboutPage.qml:83
 msgid "translator-credits"
-msgstr "Osmo Salomaa"
+msgstr ""
 
 #: qml/AboutPage.qml:93
 msgid ""
 "You can add new user interface translations or contribute to existing ones "
 "at Transifex."
 msgstr ""
-"Voit lisätä uusia käyttöliittymäkäännöksiä tai osallistua nykyisten "
-"käännösten parantamiseen Transifexissa."
+"Sie können eine neue Benutzersprache oder bei einer bestehenden "
+"Benutzersprache beitragen bei Transifex"
 
 #: qml/AboutPage.qml:101
 msgid "Transifex page"
-msgstr "Transifex-sivu"
+msgstr "Transifexseite"
 
 #: qml/MenuPage.qml:43
 msgid "Network"
-msgstr "Verkko"
+msgstr "Netzwerk"
 
 #: qml/MenuPage.qml:57
 msgid "Preferences"
-msgstr "Asetukset"
+msgstr "Einstellungen"
 
 #: qml/MenuPage.qml:63
 msgid "Maximum amount of stations visible"
-msgstr "Näytettävien asemien enimmäismäärä"
+msgstr "Maximale Anzahl von sichtbaren Stationen"
 
 #: qml/MenuPage.qml:94
 msgid "About"
-msgstr "Tietoja"
+msgstr "Über"
 
 #: qml/NetworkPage.qml:67
 msgid "via %1"
-msgstr "via %1"
+msgstr "zu %1"
 
 #: qml/NetworkPage.qml:89
 msgid "Networks"
-msgstr "Verkot"
+msgstr "Netzwerke"
 
 #: qml/NetworkPage.qml:94
 msgid "Search"
-msgstr "Etsi"
+msgstr "Suche"
 
 #: qml/NetworkPage.qml:121
 msgid "Loading"
-msgstr "Ladataan"
+msgstr "Laden"
 
 #: qml/NetworkPage.qml:164
 msgid "No networks found"
-msgstr "Ei verkkoja"
+msgstr "Keine Netzwerke gefunden"
