--- a/po/sv.po
+++ b/po/sv.po
@@ -62,7 +62,7 @@ msgstr ""
 
 #: qml/AboutPage.qml:74
 msgid "Donate via PayPal"
-msgstr ""
+msgstr "Donera via PayPal"
 
 #: qml/AboutPage.qml:79
 msgid "Translated by"
