--- a/po/pl.po
+++ b/po/pl.po
@@ -63,7 +63,7 @@ msgstr ""
 
 #: qml/AboutPage.qml:74
 msgid "Donate via PayPal"
-msgstr ""
+msgstr "Wspomóż za pomocą PayPal"
 
 #: qml/AboutPage.qml:79
 msgid "Translated by"
