--- a/po/pl.po
+++ b/po/pl.po
@@ -13,7 +13,7 @@ msgstr ""
 "Last-Translator: A <hucul@o2.pl>, 2017\n"
 "Language-Team: Polish (https://www.transifex.com/otsaloma/teams/74551/pl/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pl\n"
 "Plural-Forms: nplurals=4; plural=(n==1 ? 0 : (n%10>=2 && n%10<=4) && (n%100<12 || n%100>14) ? 1 : n!=1 && (n%10>=0 && n%10<=1) || (n%10>=5 && n%10<=9) || (n%100>=12 && n%100<=14) ? 2 : 3);\n"
