--- a/po/sl_SI.po
+++ b/po/sl_SI.po
@@ -13,7 +13,7 @@ msgstr ""
 "Last-Translator: Boštjan Štrumbelj <sponka@gmail.com>, 2017\n"
 "Language-Team: Slovenian (Slovenia) (https://www.transifex.com/otsaloma/teams/74551/sl_SI/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: sl_SI\n"
 "Plural-Forms: nplurals=4; plural=(n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3);\n"
